Deployment/kubernetes/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: gke-lb
spec:
  type: LoadBalancer
  ports: 
  - port: 3838
    targetPort: 3838
  selector:
    app: hra-app
