Deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hra-svc
  labels:
    app: hra-app
spec:
  type: ClusterIP
  ports:
  - port: 3838
    protocol: TCP
  selector:
    app: hra-app
